app-boot-v57.log
nohup: ignoring input

> Task :compileJava FAILED
/home/fbarros/Documents/projects/mvt-events/src/main/java/com/mvt/mvt_events/jpa/ADMProfile.java:115: error: cannot find symbol
        return partnership != null ? partnership.getName() : "Sem parceria";
               ^
  symbol:   variable partnership
  location: class ADMProfile
/home/fbarros/Documents/projects/mvt-events/src/main/java/com/mvt/mvt_events/jpa/ADMProfile.java:115: error: cannot find symbol
        return partnership != null ? partnership.getName() : "Sem parceria";
                                     ^
  symbol:   variable partnership
  location: class ADMProfile
/home/fbarros/Documents/projects/mvt-events/src/main/java/com/mvt/mvt_events/service/ADMProfileService.java:109: error: cannot find symbol
        adm.setPartnership(partnership);
           ^
  symbol:   method setPartnership(MunicipalPartnership)
  location: variable adm of type ADMProfile
Note: /home/fbarros/Documents/projects/mvt-events/src/main/java/com/mvt/mvt_events/jpa/UnifiedPayout.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors

[Incubating] Problems report is available at: file:///home/fbarros/Documents/projects/mvt-events/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  Note: /home/fbarros/Documents/projects/mvt-events/src/main/java/com/mvt/mvt_events/jpa/UnifiedPayout.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  /home/fbarros/Documents/projects/mvt-events/src/main/java/com/mvt/mvt_events/jpa/ADMProfile.java:115: error: cannot find symbol
          return partnership != null ? partnership.getName() : "Sem parceria";
                 ^
    symbol:   variable partnership
    location: class ADMProfile
  /home/fbarros/Documents/projects/mvt-events/src/main/java/com/mvt/mvt_events/jpa/ADMProfile.java:115: error: cannot find symbol
          return partnership != null ? partnership.getName() : "Sem parceria";
                                       ^
    symbol:   variable partnership
    location: class ADMProfile
  /home/fbarros/Documents/projects/mvt-events/src/main/java/com/mvt/mvt_events/service/ADMProfileService.java:109: error: cannot find symbol
          adm.setPartnership(partnership);
             ^
    symbol:   method setPartnership(MunicipalPartnership)
    location: variable adm of type ADMProfile
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 2s
1 actionable task: 1 executed
